# ansel_rasterizer

./: CMakeLists.txt  Config.hpp  README.md  Shader.cpp  Shader.hpp  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
config/: render_config.json
